2005-07-08 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/xmessage.cc, reroot/libreroot/xmessage.h: Added.

	* reroot/packet.h: Removed C compatibility code, moved into namespace
	  `reroot'.  Currently this breaks rerootd build until I get round to
	  updating it.

2005-07-07 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/Makefile: Defined LIBREROOT in CPPFLAGS.
	* reroot/rerootd/Makefile: Defined REROOTD in CPPFLAGS.

2005-07-06 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/filename.cc, reroot/libreroot/filename.h: Reorganized
	  & improved interface to `filename' class.

	* reroot/libreroot/filename.cc (add_working_directory): Use `getcwd'
	  function.

	* reroot/libreroot/libc.cc, reroot/libreroot/libc.h: Added `malloc'
	  wrapper function.

	* reroot/libreroot/libc.cc, reroot/libreroot/libc.h: Added current
	  working directory functions.
	* reroot/libreroot/filesystem.cc: Renamed to cwd.cc.
	* reroot/libreroot/cwd.cc: Added overrides for getting current working
	  directory, & place-holder stubs for setting it.

2005-07-06 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/zlib.pkg: Added fix for recent zlib vulnerability.

2005-07-05 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/filename.cc, reroot/libreroot/filename.h: Made
	  several anonymous namespace members in to static members of
	  `filename'.

	* reroot/libreroot/persona.cc: Replaced `limited' variable & its
	  constructor function with `is_limited' function.

	* reroot/libreroot: More comments in headers.

2005-07-03 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot: All files: converted to C++.  My reason for not
	  using C++ turned out to be incorrect, while later directory overlaying
	  functions may be made considerably easier by using the C++ STL.

	* reroot/libreroot/error.cc, reroot/libreroot/error.h: Added exception
	  handling support function.